# zebra

./: .gitignore  README.md  bench_bn254.sh  bench_groth16.sh  convertOutput.js  dummyContractCircuits.sh  go.mod  install_dependencies.sh  package-lock.json  package.json
bench_bn254/: bn254_test.go
bench_groth16/: bench_groth16.go
contract/: package.json  truffle-config.js
contract/contracts/: Pairing.sol  zebra-L1.sol  zebra-L2.sol  zebra-core.sol
contract/test/: L1-test.js  L2-test.js  cred-verify-test.js
contract/test/data/: BatchL1-512_proof.json  BatchL1-512_witness.json  BatchL1-64_proof.json  BatchL1-64_witness.json  BatchL2-512_proof.json  BatchL2-512_witness.json  BatchL2-64_proof.json  BatchL2-64_witness.json  CredVerify_proof.json  CredVerify_witness.json
dummyVerify/: BatchL1-512.sol  BatchL1-64.sol  BatchL2-512.sol  BatchL2-64.sol  README.md  credVerify.sol  dummyVerify.go
simd-spartan/: Cargo.toml
simd-spartan/curves/: Cargo.toml
simd-spartan/curves/bn254/: Cargo.toml
simd-spartan/curves/bn254/src/: lib.rs
simd-spartan/curves/bn254/src/constraints/: curves.rs  fields.rs  mod.rs  pairing.rs
simd-spartan/curves/curve-benches/: Cargo.toml
simd-spartan/curves/curve-benches/benches/: secp_256k1.rs  secq_256k1.rs
simd-spartan/curves/curve-constraint-tests/src/: lib.rs
simd-spartan/curves/grumpkin/: Cargo.toml
simd-spartan/curves/grumpkin/src/: lib.rs
simd-spartan/curves/grumpkin/src/constraints/: curves.rs  mod.rs
simd-spartan/curves/grumpkin/src/curves/: mod.rs  tests.rs
simd-spartan/curves/grumpkin/src/fields/: fr.rs  tests.rs
simd-spartan/r1cs-std/src/: lib.rs
simd-spartan/r1cs-std/src/bits/: boolean.rs
simd-spartan/r1cs-std/src/fields/fp/: mod.rs
simd-spartan/r1cs-std/src/groups/: mod.rs
simd-spartan/r1cs-std/src/groups/curves/short_weierstrass/: mod.rs
simd-spartan/r1cs-std/src/groups/curves/short_weierstrass/bn/: mod.rs
simd-spartan/r1cs-std/src/groups/curves/twisted_edwards/: mod.rs
simd-spartan/r1cs-std/src/pairing/: mod.rs
simd-spartan/r1cs-std/src/pairing/bn/: mod.rs
simd-spartan/src/: error.rs  lib.rs
simd-spartan/src/dense_mle/: mod.rs
simd-spartan/src/gkr_grand_product/: constraints.rs  mod.rs  prover.rs  verifier.rs
simd-spartan/src/hyrax_pc/: constraints.rs  mod.rs
simd-spartan/src/ip_r1cs/: constraints.rs  indexer.rs  mod.rs  prover.rs  verifier.rs
simd-spartan/src/spartan/: constraints.rs  data_structures.rs  mod.rs
simd-spartan/src/sumcheck/: constraints.rs  mod.rs  prover.rs  verifier.rs
simd-spartan/src/zebra/: mod.rs
user_circuit_size/: bellare-sig.js  cramershoup.js  eddsa.js  sha256.js  smtverifier.js
user_circuit_size/circuits/: cramershoup.circom  eddsa_test.circom  poseidon_test.circom  sha256_2560_test.circom  sha256_512_test.circom  smtverifier_test.circom
